/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'poc.java-application-conventions'
    id 'poc.java-library-conventions'
    id 'com.github.johnrengelman.shadow' version '6.1.0'
    // id 'org.springframework.boot' version '2.4.4'
	// id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}


sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

dependencies {
    // implementation 'org.springframework.boot:spring-boot-starter-web:2.4.3'
    // implementation('org.springframework.boot:spring-boot-starter-web')
    // implementation 'com.google.inject:guice:5.0.1'

    implementation 'io.dapr:dapr-sdk:1.0.0'

    api project(':lib')

    // api project(':common')

    api project(':accessone.interfaces')

}

application {
    // Define the main class for the application.
    mainClass = 'accessone.app.Application'
}
mainClassName = 'accessone.app.Application'